<resources>
    <string name="app_name">CCU Parking Ticket System</string>
    <string name="title_activity_check_out_form">CheckOutForm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_make_payment">Make Payment</string>
    <!--  Labels below are used in the CheckOutForm activity -->
    <string name="nameFirst">First Name</string>
    <string name="nameLast">Last Name</string>
    <string name="email">Email Address</string>
    <string name="billAddress">Billing Address</string>
    <string name="address">Address</string>
    <string name="zipCode">Zip Code</string>
    <string name="phone">Phone Number</string>
    <string name="cardInfoLabel">Card Information</string>
    <string name="nameOnCard">Name on Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardSecurityCode">Card Security Code CSC</string>
    <string name="expireDate">Expiration Date</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="school">School</string>
    <string name="appeal">Appeal Information</string>
    <string name="reason">Reason For Appeal</string>
    <string-array name="appealReasons">
        <item>Attended Hearing</item>
        <item>Attended Community Service</item>
        <item>Paid Off Citation</item>
        <item>Other</item>
    </string-array>
    <string name="dialogCancel">Are you sure you want to cancel?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Sign up</string>
    <string name="password">Password</string>
    <string name="appealButton">Appeal</string>
    <string name="payButton">Pay</string>
    <string name="retypepassword">Re-Type Password</string>
    <string name="studId">CCU ID</string>
</resources>
